--- a/index.css
+++ b/index.css
@@ -22,8 +22,23 @@ header {
   width: 100%;
   height: 84px;
   flex: 0 0 84px;
-  background-color: black;
+}
+
+footer {
+  width: 100%;
+  height: 20px;
+  flex: 0 0 20px;
+}
+
+header,
+footer {
+  font-family: Helvetica, 'Helvetica Neue', sans-serif;
+  font-size: 14px;
+  line-height: 17px;
+  letter-spacing: -0.01em;
+  font-weight: bold;
   color: white;
+  background-color: black;
 }
 
 .header-container {
@@ -38,10 +53,6 @@ header {
   padding-left: 15px;
   padding-top: 12px;
   flex: 0 0 330px;
-  font-family: Helvetica, 'Helvetica Neue', sans-serif;
-  font-size: 14px;
-  line-height: 17px;
-  letter-spacing: -0.01em;
   color: #999;
   column-count: 2;
 }
@@ -52,18 +63,23 @@ header {
   margin: 0;
 }
 
-.header-left a {
+.header-right {
+  flex: 1;
+}
+
+header a,
+header a:active,
+header a:visited,
+footer a,
+footer a:active,
+footer a:visited {
   color: #999;
-  font-weight: bold;
   text-decoration: none;
 }
 
-.header-left a:hover {
+header a:hover,
+footer a:hover {
   color: white;
-}
-
-.header-right {
-  flex: 1;
 }
 
 h1 {
@@ -102,13 +118,6 @@ main {
 
 .info-panel > :first-child {
   margin-top: 5px;
-}
-
-footer {
-  width: 100%;
-  height: 20px;
-  flex: 0 0 20px;
-  background-color: black;
 }
 
 .map-container {
