--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,43 +1,48 @@
-
 .header-container {
   display: flex;
-  /* Allow h1 to occur earlier in source order but be
-     positioned to the right */
-  flex-direction: row-reverse;
 }
 
 .header-left {
   width: 330px;
   padding-left: 15px;
-  padding-top: 12px;
   flex: 0 0 330px;
   color: #999;
   column-count: 2;
 }
 
-.header-left ul {
+.header-left,
+.header-right {
+  padding-top: 12px;
+}
+
+.header-right {
+  padding-right: 15px;
+  flex: 1;
+}
+
+.header-container ul {
   list-style-type: none;
   padding-left: 0;
   margin: 0;
 }
 
-.header-right {
-  flex: 1;
+.header-right ul li {
+  display: inline-block;
 }
 
-h1 {
-  margin: 0;
-  margin-top: 10px;
+header h1 {
   font-family: Helvetica, 'Helvetica Neue', sans-serif;
   display: none;
 }
 
-img.title {
-  margin-top: 11px;
+img.header-image {
+  position: absolute;
+  top: 11px;
+  left: 330px;
   height: 34px;
 }
 
-.banner-white-line {
+.header-white-line {
   position: absolute;
   top: 9px;
   left: 0px;
@@ -45,4 +50,8 @@ img.title {
   height: 1px;
   background-color: white;
   overflow: hidden;
+}
+
+.float-right {
+  float: right;
 }
