--- a/src/components/StationList.css
+++ b/src/components/StationList.css
@@ -100,6 +100,12 @@
   margin-right: 1em;
 }
 
+.station-list-bullets {
+  /* prevents 2nd lines of bullets from bumping up against the first one.
+  only necessary on Windows? */
+  line-height: 1.4;
+}
+
 .station-list-bullets .subway-bullet-small {
   margin-right: 2px;
   vertical-align: sub; /* force visual middle alignment */
