--- a/src/index.css
+++ b/src/index.css
@@ -68,6 +68,7 @@ main {
   flex: 0 0 330px;
   padding: 0 15px;
   background-color: rgb(234, 232, 225);
+  line-height: 1.4;
 }
 
 .info-panel > :first-child {
@@ -188,20 +189,8 @@ h3 {
   vertical-align: text-bottom;
 }
 
-.service-notice p {
-  line-height: 1.4;
-}
-
-.service-notice > p:first-of-type {
-  margin-top: 2em;
-}
-
 .service-notice p img {
   vertical-align: text-bottom;
-}
-
-.service-notice-active a {
-  color: black;
 }
 
 .service-notice-details {
@@ -218,4 +207,18 @@ h3 {
 
 .icon-isa {
   height: 18px;
+}
+
+.service-notice article {
+  border-top: 1px solid #888;
+  margin-top: 2em;
+}
+
+.service-notice article > p:first-child {
+  margin-top: 3px;
+}
+
+.service-notice-active {
+  border-top: 1px solid black !important;
+  color: black;
 }
