StationList: show "no stations" message if query is not found

--- a/src/components/StationList.css
+++ b/src/components/StationList.css
@@ -120,3 +120,8 @@
   margin-right: 2px;
   vertical-align: sub; /* force visual middle alignment */
 }
+
+.station-list-empty {
+  /* Match list item placement */
+  margin-top: 2px;
+}
