--- a/src/components/MapContainer.css
+++ b/src/components/MapContainer.css
@@ -1,5 +1,33 @@
+.map-container {
+  position: relative;
+  background-color: #ebf0f0;
+  flex: 1;
+}
+
+#map {
+  width: 100%;
+  height: 100%;
+}
+
 /* for error message */
 .map-container-error > h2 {
   margin-left: 5px;
   margin-top: 5px;
+}
+
+.static-map {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.static-map > picture {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.static-map img {
+  width: 100%;
+  height: 100%; 
+  object-fit: contain;
 }
