--- a/src/components/ServiceNotice.css
+++ b/src/components/ServiceNotice.css
@@ -1,4 +1,4 @@
-.service-notice {
+.service-notice-container {
   overflow: hidden;
   overflow-y: auto;
   flex: 1 1 auto;
@@ -57,16 +57,16 @@
   height: 18px;
 }
 
-.service-notice article {
+.service-notice {
   border-top: 1px solid #888;
   margin-top: 2em;
 }
 
-.service-notice article > p {
+.service-notice > p {
   padding-right: 1.25em;
 }
 
-.service-notice article > p:first-child {
+.service-notice > p:first-child {
   margin-top: 3px;
 }
 
