--- a/src/components/Nav.css
+++ b/src/components/Nav.css
@@ -7,7 +7,10 @@
   padding-left: 15px;
   flex: 0 0 330px;
   color: #999;
-  /* column-count: 2; */
+}
+
+.nav-left-columns {
+  column-count: 2;
 }
 
 .nav-left,
