--- a/src/components/InfoPanel.css
+++ b/src/components/InfoPanel.css
@@ -9,6 +9,16 @@
   line-height: 1.4;
 }
 
+@media only screen and (max-width: 600px) {
+  .info-panel {
+    width: 100%;
+    max-height: 200px;
+    flex: 0 0 200px;
+    overflow-y: auto;
+    display: block;
+  }
+}
+
 .info-panel > h2:first-child,
 .info-panel > h3:first-child {
     margin-top: 5px;
@@ -16,6 +26,7 @@
 
 .info-panel > h2 {
   flex: 0 0 40px;
+  height: 40px;
 }
 
 .info-panel a {
