--- a/src/components/MapContainer.css
+++ b/src/components/MapContainer.css
@@ -7,6 +7,12 @@
 #map {
   width: 100%;
   height: 100%;
+  /* required to force map to display on small screens */
+  position: absolute !important;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
 /* for error message */
