--- a/src/components/StationList.css
+++ b/src/components/StationList.css
@@ -83,6 +83,12 @@
   height: 400px; /* for some reason specifying a height is required for overflow-y: auto work in Firefox */
 }
 
+@media only screen and (max-width: 600px) {
+  .station-list-container {
+    height: auto;
+  }
+}
+
 .station-list {
   margin-top: 0;
   padding: 0;
