--- a/src/components/LandingView.css
+++ b/src/components/LandingView.css
@@ -1,3 +1,8 @@
 .landing a:hover {
   text-decoration: underline;
 }
+
+.landing-notice {
+  background-color: rgba(255, 255, 255, 0.65);
+  padding: 1em;
+}
